style/main.css
* {
  font-family: "Futura";
  box-sizing: border-box;
}
body {
    color: #424242;
    background-color: #ffffff;
    }

.main {
  margin-top: 7vh;
  padding: 0 20vw;
}

hr, .tbl tr {
  border-top: none!important;
  border-bottom: 1px solid #ccc!important;
}

h1, h2, h3, h4, h5, h6 {
  padding: 0px;
}

.navbar {
  border: none!important;
  padding: 0 20vw;
  top: 0;
  height:7vh;
  position:fixed;
  width:100%;
  line-height:7vh;
  z-index: 2;
}

.contact-icon {
  padding: 0px 2px;
  font-size: 20px;

}

.contact-icon:hover {
  color:#ccc!important;
}


.bar-button{
  font-size: min(20px, 3vw);
  border:none!important;
  /* display:inline-block; */
  vertical-align:middle;
  overflow:hidden;
  text-decoration:none;
  color:inherit;
  background-color:inherit;
  text-align:center;
  cursor:pointer;
  white-space:nowrap;
  float: right;
  height: 100%;
  width: auto;
  padding: 0 8px;
}

.outer-div-social-media {
  display: flex;
  justify-content: center;
  flex-direction: row;
  /* gap: 0px; */
}

.outer-div-social-media > div {
  display: flex;
}

.social-media {
  display: inline-block; /* or 'inline' depending on your design */
  margin-right: 2px;
}


img {
  max-height: 100%;
  max-width: 100%;
}

#profile-container {
  height: 25vw !important;
  width: 25vw !important;
  padding-top: 36px;;
  padding-left: 8px;
  /* height: 20vh; */
  float:right !important;
}

#profile {
  float: right !important;
}

p, ul li {
  color:#616161!important;
  font-size: 18px;
  line-height: 1.8;
  padding: 0px;
}
/*
ul {
  list-style-type: disc!important;
} */

.ulst {
  list-style-type: disc!important;
  list-style-position: outside;
  line-height: 3em;
  padding: 0 26px!important;
  text-align:left;
}

.ulst li {
  line-height: 2.5;
  font-size: 16px;
}
.ulst li:last-child {
  border-bottom: none!important;
  padding-bottom: 32px;}

.tbl{
  border-collapse: collapse;
  border-spacing:0;
  width:100%!important;
  display:table;
  font-size: 16px;
  margin-bottom: 32px;
}

.tbl td, .tbl th {line-height: 2em;overflow:auto;padding:12px 8px;display:table-cell;text-align:left;vertical-align:top}
.tbl tr:first-child, .tbl tr:last-child {
  border-bottom: none!important;
}
/* .tbl tr:nth-child(even){background-color:#ccc!important;} */
/*
.sidebarButton {
    color: w3-dark-grey;
}
*/

.text-grey {
  color:#757575!important
}

.hover-text-grey:hover {
  color:#757575!important
}

.dark-grey {
  color:#fff!important;
  background-color:#616161!important
}

.caltech-logo {
  vertical-align:middle!important;
  text-align:center!important;
  text-decoration: none;
}

.logo {
  vertical-align:middle;
  overflow:hidden;
  padding-right: 4px;
  padding-bottom: 4px;
  max-height: 80%;
  width: 8vw!important;
}

.gray-scale {
  filter: gray; /* IE6-9 */
  -webkit-filter: grayscale(1); /* Google Chrome, Safari 6+ & Opera 15+ */
  filter: grayscale(1); /* Microsoft Edge and Firefox 35+ */
}

.center {
    display: block;
    margin-top: 20px;
    margin-left: auto;
    margin-right: auto;
    width: 50%;
}


.small-button {
  border:none;
  display:inline-block;
  vertical-align:middle;
  overflow:hidden;
  text-decoration:none;
  color:#fff!important;
  background-color:inherit;
  text-align:center;
  cursor:pointer;
  white-space:nowrap;
  padding: 6px 8px;
  width: 52px;
  font-size: 12px;
  border-radius:8px;
}


.small-button:hover, .bar-button:hover{
  background-color:#ccc!important;
}

.active{
    background-color:#ccc;
}

#foot {
  width:100%;font-size:36px;opacity:0.6;margin:auto;text-align:center;
}
.fa-foot{font-size:36px!important;
  margin-right:16px!important;
  }

.gallery {
  display: flex;
  flex-wrap: wrap;
  padding: 0px;
}

.gallery img{
  border: 1px solid #ccc;
}
/*
.gallery img:hover {
  border: 1px solid #777;
} */

/* Create four equal columns that sits next to each other */
.column {
  flex: 25%;
  max-width: 25%;
  padding: 0;
}

.column img {
  margin: 2px;
  vertical-align: middle;
  width: 100%;
}

#header {
  text-align:center!important;
  padding-top:2em;
}
#pic-one {
  display: none;
}

#about {
  padding-bottom: 16px;
  border-top: none!important;
  border-bottom: 1px solid #ccc!important;
  outline: 0px none;  
  overflow: hidden;
}

.hr-responsive {
  width: 75%;
}

.profile-photo {
  float: right;
  margin-left: 20px; /* Space between the photo and the text */
  width: 300px; /* Adjust as needed */
  height: 300px; /* Adjust as needed */
}

.about-text {
  text-align: justify;
}



/* Responsive layout - makes a two column-layout instead of four columns */
@media screen and (max-width:1150px) {
  .hr-responsive {
    width: 100%!important;
  }
}

@media screen and (max-width:800px) {
  .main {
    padding: 0 6vw!important;
  }
  .navbar {
    padding-left: 6vw!important;
    padding-right: 6vw!important;

  }
  .bar-button {
    max-width: 15vw!important;
  }
  .logo {
    vertical-align:middle;
    overflow:hidden;
    padding-right: 4px;
    padding-bottom: 4px;
    max-height: 80%;
    width: 12vw!important;
  }
  
  #profile-container {
    margin:auto!important;
    height: 70vw!important;
    width: 70vw!important;
    float:none!important;
  }
  #profile {
    float: center!important;
  }
  #top-hr {
    width: 100%!important;
  }
  .tbl td{
    display: block!important;
  }
  .column {
    flex: 50%;
    max-width: 50%;
  }

  .col-2 {
    flex: 100%!important;
    max-width: 100%!important;
  }

  
  
}

/* Responsive layout - makes the two columns stack on top of each other instead of next to each other */
@media screen and (max-width: 600px) {
  .column {
    flex: 100%;
    max-width: 100%;
  }

  #pic-one {
    display: block;
  }
  #pic-two {
    display: none;
  }
}

.row {
  display: flex;
}

.col-2 {
  flex: 50%;
}

.polygon-container {
  float: right;
  width: 50%;
  
}

.polygon {
  width: 100%;
  height: 30vh;
}

#needtowrap {
  -webkit-columns: 2;
  -moz-columns: 2;
  columns: 2;
}

#needtowrap p {
  margin: 0;
}

#needtowrap p + p {
  text-indent: 1em;
}

.orange-dot {
  height: 10px;
  width: 10px;
  background-color: #FF6C0C;
  border-radius: 50%;
  display: inline-block;
}

.green-dot {
  height: 10px;
  width: 10px;
  background-color: #73A950;
  border-radius: 50%;
  display: inline-block;
}

